# simpulse

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_CLEANUP_PLAN.md  BEAUTIFUL_CLI_COMPLETE.md  BETA_FEEDBACK_TEMPLATE.md  BETA_RELEASE_COMPLETE.md  BETA_RESPONSE_PLAN.md  BREAKTHROUGH_RESEARCH_ANALYSIS.md  BRUTAL_HONESTY_AUDIT.md  BRUTAL_HONESTY_REPORT.md  CASE_STUDIES_COMPLETE.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLEANUP_REPORT.md  COMMUNITY_RELEASE.md  COMPLETE_OPTIMIZATION_SYSTEM.md  COMPLETE_PERFORMANCE_TRUTH.md  COMPREHENSIVE_CLEANUP_PLAN.md  COMPREHENSIVE_ERROR_HANDLING_IMPLEMENTATION.md  COMPREHENSIVE_PROJECT_AUDIT.md  COMPREHENSIVE_PROJECT_AUDIT_FINAL.md  COMPREHENSIVE_REALITY_AUDIT.md  CONTRIBUTING.md  CRITICAL_ANALYSIS_WHY_70_PERCENT_FAIL.md  CRITICAL_FAILURE_MODES.md  CRITICAL_PROOF_71_PERCENT.md  DEEP_IMPLEMENTATION_AUDIT.md  DEEP_TRUTH_SUMMARY.md  DELETION_LOG.md  DEPENDENCY_AUDIT.md  DEPENDENCY_PURGE_PLAN.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DETAILED_DECEPTION_ANALYSIS.md  DEVELOPMENT_ROADMAP.md  Dockerfile  (+222 more)
.github/ISSUE_TEMPLATE/: beta-feedback.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-fixed.yml  ci.yml  ci.yml.disabled  lean.yml  optimize-simp.yml  pr-optimization.yml  release.yml  tests.yml  working-ci.yml
benchmarks/: BENCHMARK_README.md  README.md  REAL_SIMP_PERFORMANCE_REPORT.md  analyze_benchmarks.py  baseline.json  baseline_measurements.json  comprehensive_analysis.py  extract_simp_metrics.py  final_performance_results.json  lean_benchmark_runner.py  performance_optimization.py  plot_benchmarks.py  processed_simp_metrics.json  real_lean_test.py  real_measurement_results.json  run_benchmarks.sh  simp_performance_summary.json  version_control_benchmarks.py
benchmarks/benchmark_files/: bench_arithmetic.lean  (+3 more)
case_studies/: README.md  case_study_report.txt  case_study_results.json
demo_test/: DemoTest.lean
docker/: Dockerfile.main  Dockerfile.validation  entrypoint.sh
docs/: API_REFERENCE.md  CONTRIBUTING.md  EXAMPLES.md  FREQUENCY_COUNTER_REAL.md  HOW_TO_TEST_SIMPULSE.md  INSTALLATION.md  JIT_PROFILER.md  MATHLIB4_VERIFICATION_PROOF.md  NEXT_STEPS_IMMEDIATE.md  PHASE_0_REALITY_FOUNDATION.md  PHASE_13_LAUNCH_COMPLETE.md  PHASE_14_STRATEGY.md  PORTFOLIO_APPROACH.md  PROOF_OF_CONCEPT_STATUS.md  QUICKSTART.md  README.md  REALITY_CHECK.md  REAL_PROJECT_RESULTS.md  REAL_WORLD_TEST_GUIDE.md  RELEASE_COMPLETE.md  ROADMAP.md  SIMPULSE_PERFORMANCE_PROOF.md  TEST_COMMANDS.md  TROUBLESHOOTING.md  VALIDATION_ANSWER.md  changelog.md  complete_documentation.py  deploy_documentation.py  installation.md  mathlib_tutorial.md  simpng_research_paper.md  testing.md  usage.md
examples/: README.md  advanced-features.py  analyze_trace_demo.py  arithmetic_heavy.lean  basic-usage.py  basic_algebra.lean  basic_usage.py  generate_lean_trace.sh  identity_laws.lean  mathlib4_analysis_demo.py  optimization_demo.lean  performance_simulation.py  phase1_integration.py  phase2_evolution.py  profile_example.py  real_trace_example.analysis.json  real_trace_example.txt  simp_optimization_demo.py  simple_logic.lean
health_check_results/: LeanCopilot_health_check.txt  Robo_health_check.txt  duality_health_check.txt  leansat_detailed_analysis.md  leansat_health_check.txt  smalltt_health_check.txt  top5_projects_case_studies.md
lean4/: Main.lean  SampleRules.lean  Simpulse.lean  example_integration.lean  example_optimizations.json  lakefile.lean
leansat_optimization_results/: leansat_analysis_report.md  leansat_optimization_plan.json
marketing/: launch_materials.py  success_metrics.py
mathlib4_test_modules/: FINAL_MATHLIB4_ANALYSIS_REPORT.md  comprehensive_pipeline_test.py  mathlib4_comprehensive_report_20250703_112321.json  simple_test.py  test_simpulse_pipeline.py
outreach_messages/: AndrasKovacs_smalltt.txt  lacker_lean4perf.txt  lean_zulip_post.md  leanprover_leansat.txt  madvorak_duality.txt  ykonstant1_esiv.txt
papers/: contextual_bandits_theorem_prover.tex
pilot_experiment/: experiment_results_20250707_122124.json  payoff_matrix_20250707_122124.csv  success_matrix_20250707_122124.csv
scripts/: build_leansat_case_study.py  case_study_builder.py  cleanup_codebase.py  community_beta.py  community_outreach.py  deep_truth_assessment.py  demo_correctness_validation.py  demo_enhanced_optimization.py  demo_jit.py  demo_portfolio.py  demo_real_extraction.py  demo_simpng.py  demo_simpng_impact.py  deploy_to_github.py  execute_full_testing.py  final_performance_test.py  fix_git_history.py  fix_test_reality.py  jit_demo.py  leansat_direct_analysis.py  mathlib4_validation.py  measure_improvement.py  measure_improvement_v2.py  minimal_viable_product.py  minimal_working_example.py  optimize_leansat.py  optimize_leansat_simple.py  portfolio_demo.py  post_to_community.py  prepare_pypi_release.py  production_readiness_audit.py  proof_of_concept.py  proof_of_concept_v2.py  prove_performance_improvement.py  publish.py  radical_cleanup.py  realistic_simulation.py  reality_demo.py  release_checklist.py  run_comprehensive_measurement.py  (+16 more)
simple_experiment/: experiment_results_20250707_122232.json  experiment_summary.json  payoff_matrix_20250707_122232.csv  success_matrix_20250707_122232.csv
simpulse_test_project/: lakefile.lean
test_demo/: Demo.lean
test_simp_perf/: Main.lean  README.md  TestSimpPerf.lean  lakefile.toml
tests/: TEST_REALITY_STATUS.md  TEST_STATUS.md  comprehensive_test_suite.py  conftest.py  test_cli.py  test_cli_basic.py  test_core.py  test_critical_failures.py  test_error_scenarios.py  test_frequency_counter.py  test_frequency_counter_real.py  test_honest_stubs.py  test_integration.py  test_profiling.py  test_real_function_coverage.py  test_rule_extractor_comprehensive.py  test_simple_optimizer.py
validation/: benchmark_real_modules.py  run_complete_validation.sh  validate_on_mathlib4.py  validate_standalone.py  validation_script.sh  verify_mathlib4.py
validation_results/: COMPREHENSIVE_VALIDATION_REPORT.md  validation_summary.json
(+258 files in other folders)
