[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpulse"
version = "2.0.0"
description = "Advanced Lean 4 simp optimization using real diagnostic data from Lean 4.8.0+"
authors = [{name = "Bright Liu", email = "brightliu@college.harvard.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["lean4", "theorem-proving", "simp", "optimization", "diagnostics", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.optional-dependencies]
memory = ["psutil>=5.9.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
]

[project.scripts]
simpulse = "simpulse.cli:main"

[project.urls]
Homepage = "https://github.com/Bright-L01/simpulse"
Repository = "https://github.com/Bright-L01/simpulse"
Issues = "https://github.com/Bright-L01/simpulse/issues"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    ".venv",
    "venv",
    "test_*.py",  # Exclude test files from project root
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "RUF"]
ignore = [
    "E501",   # Line too long - handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers"]
testpaths = ["tests"]
python_files = ["test_*.py"]